# nextjs-bazel

./: .bazelrc  .eslintignore  .gitignore  .prettierignore  BUILD.bazel  README.md  WORKSPACE  dependencies.bzl  index.bzl  next.config.js  package.json  run-from-execroot-fix.patch  tsconfig.json
pages/: _app.tsx  _document.tsx  index.tsx
patches/: next+10.0.9.patch  next+10.1.2.patch
styles/: Home.module.css  Home.module.sass  globals.sass
