load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin", "nodejs_binary")
load("@npm//next:index.bzl", "next")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "source_files",
    srcs = glob([
        "public/**/*",
        "pages/*",
        "styles/*",
    ]) + [
        # FIXME not sure which of those are actually needed
        "tsconfig.json",
        "next.config.js",
        "next-env.d.ts",
        "package.json",
        "yarn.lock",
        "postcss.config.js",
        "tailwind.config.js",
    ],
)

copy_to_bin(
    name = "copy_source_files",
    srcs = ["source_files"],
)

next(
    name = "build",
    outs = [
        ".next",
        "public/sw.js",
        # FIXME this filename will probably change, needs more investigation
        "public/workbox-030153e1.js",
    ],
    args = [
        "build",
        "$(RULEDIR)",
        "--node_options=--preserve-symlinks-main",
        "--bazel_run_from_execroot",
    ],
    data = [
        "copy_source_files",
        "@npm//@types/node",
        "@npm//@types/react",
        "@npm//autoprefixer",
        "@npm//next-pwa",
        "@npm//postcss",
        "@npm//react",
        "@npm//react-dom",
        "@npm//tailwindcss",
        "@npm//typescript",
    ],
)

nodejs_binary(
    name = "client",
    args = ["start"],
    data = [
        "build",
        "copy_source_files",
        "@npm//:node_modules",
    ],
    entry_point = "@npm//:node_modules/next/dist/bin/next",
    templated_args = ["--bazel_patch_module_resolver"],
)

nodejs_image(
    name = "client_image",
    args = ["start"],
    data = [
        "build",
        "copy_source_files",
        "@npm//:node_modules",
    ],
    entry_point = "@npm//:node_modules/next/dist/bin/next",
    templated_args = ["--bazel_patch_module_resolver"],
)
