load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin", "nodejs_binary")
load("@npm//next:index.bzl", "next")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "source_files",
    srcs = glob([
        "public/**/*",
        "pages/*",
        "styles/*",
    ]) + [
        "tsconfig.json",
        "next.config.js",
        "next-env.d.ts",
        "package.json",
        "yarn.lock",
        "postcss.config.js",
        "tailwind.config.js",
    ],
)

copy_to_bin(
    name = "copy_source_files",
    srcs = ["source_files"],
)

next(
    name = "build",
    outs = [
        ".next",
        "public/sw.js",
        "public/workbox-030153e1.js",
    ],
    args = [
        "build",
        "$(RULEDIR)",
    ],
    data = [
        "copy_source_files",
        "@npm//@types/node",
        "@npm//@types/react",
        "@npm//autoprefixer",
        "@npm//next-pwa",
        "@npm//postcss",
        "@npm//react",
        "@npm//react-dom",
        "@npm//tailwindcss",
        "@npm//typescript",
    ],
)

next(
    name = "dev",
    args = [
        "dev",

        # Root of app is the directory in which this BUILD.bazel file is located in
        package_name(),

        # Set port of development server to 3001
        "-p 3001",

        # To prevent webpack from bundling multiple react versions
        "--node_options=--preserve-symlinks-main",
        "--bazel_run_from_execroot",
    ],
    data = [
        "copy_source_files",
        "@npm//@types/node",
        "@npm//@types/react",
        "@npm//autoprefixer",
        "@npm//next-pwa",
        "@npm//postcss",
        "@npm//react",
        "@npm//react-dom",
        "@npm//tailwindcss",
        "@npm//typescript",
    ],
    env = {
        "NODE_ENV": "development",
    },
    tags = ["ibazel_notify_changes"],
)

nodejs_binary(
    name = "client",
    args = ["start"],
    data = [
        "build",
        "copy_source_files",
        "@npm//:node_modules",
    ],
    entry_point = "@npm//:node_modules/next/dist/bin/next",
    templated_args = ["--bazel_patch_module_resolver"],
)

nodejs_image(
    name = "client_image",
    args = ["start"],
    data = [
        "build",
        "copy_source_files",
        "@npm//:node_modules",
    ],
    entry_point = "@npm//:node_modules/next/dist/bin/next",
    templated_args = ["--bazel_patch_module_resolver"],
)
